force-app/main/default/objects/Interested_Buyer__c/Interested_Buyer__c.object-meta.xml
<CustomObject>
    <label>Interested Buyer</label>
    <nameField>
        <displayFormat>IB-{00000}</displayFormat>
        <label>Interested Buyer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interested Buyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>