force-app/main/default/objects/Interested_Buyer__c/fields/Buyer_Account__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Buyer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interested Buyers</relationshipLabel>
    <relationshipName>Interested_Buyers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>