force-app/main/default/objects/Interested_Buyer__c/fields/Buyer_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Requirement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Buyer Requirement</label>
    <referenceTo>Buyer_Requirement__c</referenceTo>
    <relationshipLabel>Interested Buyers</relationshipLabel>
    <relationshipName>Interested_Buyers</relationshipName>
    <type>Lookup</type>
</CustomField>