force-app/main/default/objects/Interested_Buyer__c/fields/Expected_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closing_Date__c</fullName>
    <label>Expected Closing Date</label>
    <type>Date</type>
</CustomField>