force-app/main/default/objects/Interested_Buyer__c/fields/Offered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offered_Amount__c</fullName>
    <label>Offered Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>